Apply html styles to repair overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
 /*-------------------------- Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
 
+html {
+    display: inline-block;
+    overflow: scroll;
+}
+
 body {
     background:
     /* top, transparent red, faked with gradient */
